fix ol li flex wrap

--- a/src/components/Document/index.scss
+++ b/src/components/Document/index.scss
@@ -147,7 +147,6 @@
             li {
                 position: relative;
                 display: flex;
-                flex-wrap: wrap;
 
                 &::before {
                     counter-increment: speakers;
